website/code/spellcheck-icpp.log
BUILD COMMANDS FOR: spellcheck.icpp

Thu Oct  6 22:37:38 PDT 2005

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll -I ../../Include spellcheck.c++ -o spellcheck.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc spellcheck.c++.o -o spellcheck.icpp_run -O3 -ip -static -unroll -I ../../Include 
spellcheck.c++(17): error: namespace "std" has no member "hash"
  using std::hash;
             ^

spellcheck.c++(18): error: namespace "std" has no member "hash_map"
  using std::hash_map;
             ^

spellcheck.c++(31): error: hash is not a template
      template<> struct hash<span> {
                        ^

spellcheck.c++(103): error: qualified name is not allowed
      std::hash_map<span, int, str_hash_compare> dict;
      ^

spellcheck.c++(103): error #77: this declaration has no storage class or type specifier
      std::hash_map<span, int, str_hash_compare> dict;
      ^

spellcheck.c++(103): error: expected a ";"
      std::hash_map<span, int, str_hash_compare> dict;
                   ^

spellcheck.c++(83): error: identifier "dict" is undefined
              if (dict.end() == dict.find(span(begin, end))) {
                  ^

spellcheck.c++(95): error: identifier "dict" is undefined
              if (dict.end() == dict.find(span(line, line + in.gcount() - 1))) {
                  ^

compilation aborted for spellcheck.c++ (code 2)
make[3]: [spellcheck.icpp_run] Error 2 (ignored)
rm: cannot remove `spellcheck.c++.o': No such file or directory
rm: cannot remove `spellcheck.o': No such file or directory
make[3]: [spellcheck.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

spellcheck.icpp_run %A
Error, could not exec spellcheck.icpp_run 4 (No such file or directory)
PATH=/opt/shootout/shootout/bench/spellcheck:/opt/shootout/shootout/bench/spellcheck/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
